# CoffeyServer

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  db.sql
src/: main.cpp
src/buffer/: buffer.cpp  buffer.h
src/database/: database.cpp  database.h
src/helpers/: json_helper.cpp  json_helper.h
src/server/: listener.cpp  listener.h  servermanager.cpp  servermanager.h  serverworker.cpp  serverworker.h  session.cpp  session.h
src/server/request/: content_id.h  login_requestprocessing.cpp  request.cpp  request.h  requestactions.h  requestprocessing.cpp  requestprocessing.h  requesttypes.h
src/user/: token.cpp  token.h
src/utils/: config.h
tests/: CMakeLists.txt  database_test.cpp
